--- a/survey/templates/survey/footer.html
+++ b/survey/templates/survey/footer.html
@@ -1,3 +1,6 @@
-<footer class="container">
-  <p>&copy; Company 2017-2020</p>
+<footer class="container" align="center">
+      <p>ViewFinder - a simple way to find your view point...</p>
+      <p>
+        <a href="#">Back to top</a>
+      </p>
 </footer>
