--- a/survey/templates/survey/header.html
+++ b/survey/templates/survey/header.html
@@ -1,3 +1,5 @@
+{% load static %}
+<!--
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
   <a class="navbar-brand" href="#">View Finder</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,3 +32,44 @@
     </form>
   </div>
 </nav>
+-->
+
+    <div class="container">
+      <header class="blog-header py-3">
+        <div class="row flex-nowrap justify-content-between align-items-center">
+          <div class="col-4 pt-1">
+            <a class="text-muted" href="#">Subscribe</a>
+          </div>
+          <div class="col-4 text-center">
+            <h3 class="display-6"><b>ViewFinder</b></h3>
+          </div>
+          <div class="col-4 d-flex justify-content-end align-items-center">
+            <a class="text-muted" href="#">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="mx-3"><circle cx="10.5" cy="10.5" r="7.5"></circle><line x1="21" y1="21" x2="15.8" y2="15.8"></line></svg>
+            </a>
+            <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+          </div>
+        </div>
+      </header>
+
+      <div class="nav-scroller py-1 mb-2">
+        <nav class="nav d-flex justify-content-between">
+          <a class="p-2 text-muted" href="#">About Us</a>
+          <a class="p-2 text-muted" href="#">Blog</a>
+          <a class="p-2 text-muted" href="#">FAQs</a>
+          <a class="p-2 text-muted" href="#">QnA</a>
+          <a class="p-2 text-muted" href="#">Products</a>
+          <a class="p-2 text-muted" href="#">Pricing</a>
+        </nav>
+      </div>
+
+      <div class="jumbotron p-2 p-md-5 text-white rounded bg-dark" style="background:url('{% static 'survey/images/Elder1.jpg' %}')">
+
+        <div class="col-md-12 px-0" >
+          <h1 class="display-4 font-italic">Survey for Elder Care Project</h1>
+          <p class="lead my-3">We are a group of professionals who are located in different parts of the world.
+            All of us lately experienced different kinds of challenges managing our parents since we are all located at different places.
+            We deeply believe that this is a bigger problem which need to be addressed. To understand better if this is indeed a generic issue, we are running this survey to understand your view point.</p>
+
+        </div>
+      </div>
