--- a/survey/templates/survey/detail.html
+++ b/survey/templates/survey/detail.html
@@ -1,21 +1,248 @@
 {% extends 'survey/base.html' %}
 
 {% block main_content %}
- <div class="row">
 
-<h4>{{ html }}</h4>
-     <br><br>
- </div>
-<div class="row">
-<form  method="post" novalidate="True">
-   {% csrf_token %}
-    <div class="form-group">
-            <table>
-                {{ form.as_table }}
-            </table>
-            <input type="submit" class="btn btn-success my-2 my-sm-0" value="Submit"/>
+{% if status %}
+<div class="col-xl-8 col-lg-6 col-md-6 col-sm-8 mx-auto text-center form p-4">
 
-    </div>
-</form>
+        <h3 class="display-4">{{ html }}</h3>
+        <h3 class="display-8">{{ status }}</h3>
 </div>
+
+<div id="cover-caption">
+        <div class="container">
+                <div class="col-xl-8 col-lg-6 col-md-6 col-sm-8 mx-auto text-center form p-4">
+                    <div class="px-2">
+
+<form  action='/detail/' method="post" novalidate="True">
+   {% csrf_token %}
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                <label for="{{ form.name.id_for_label }}">{{ form.name.label }}</label>
+                     {{ form.name }}
+            </div>
+
+            <div class="form-row" align="left">
+                <code>  {{ form.name.errors }}</code>
+            </div>
+        </div>
+
+
+         <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.email.id_for_label }}">{{ form.email.label }}</label>
+
+                        {{ form.email }}
+
+            </div>
+             <div class="form-row" align="left">
+                <code> {{ form.email.errors }}</code>
+            </div>
+         </div>
+
+         <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q2.id_for_label }}">{{ form.q2.label }}</label>
+
+                        {{ form.q2 }}
+
+            </div>
+             <div class="form-row" align="left">
+                 <code>  {{ form.q2.errors }}</code>
+            </div>
+         </div>
+
+
+         <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q3.id_for_label }}">{{ form.q3.label }}</label>
+                        {{ form.q3 }}
+            </div>
+             <div class="form-row" align="left">
+                 <code>{{ form.q3.errors }}</code>
+            </div>
+                </div>
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q4.id_for_label }}">{{ form.q4.label }}</label>
+            </div>
+                  <div class="form-row" align="left">
+                    {% for radio in form.q4 %}
+                      <br> <div class="select">{{ radio.tag }}  {{ radio.choice_label }}&nbsp;&nbsp;</div>
+
+                    {% endfor %}
+                  </div>
+            <div class="form-row" align="left">
+                <code>{{ form.q4.errors }}</code>
+            </div>
+            </div>
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q5.id_for_label }}">{{ form.q5.label }}</label>
+            </div>
+                  <div class="form-row" align="left">
+                    {% for radio in form.q5 %}
+                      <br> <div class="select">{{ radio.tag }}  {{ radio.choice_label }}&nbsp;&nbsp;</div>
+
+                    {% endfor %}
+                  </div>
+            <div class="form-row" align="left">
+                <code>{{ form.q5.errors }}</code>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q6.id_for_label }}">{{ form.q6.label }}</label>
+                        {{ form.q6 }}
+
+            </div>
+            <div class="form-row" align="left">
+                <code>  {{ form.q6.errors }}</code>
+            </div>
+                </div>
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q7.id_for_label }}">{{ form.q7.label }}</label>
+                        {{ form.q7 }}
+
+                    </div>
+            <div class="form-row" align="left">
+                <code>   {{ form.q7.errors }}</code>
+            </div>
+                </div>
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q8.id_for_label }}">{{ form.q8.label }}</label>
+            </div>
+                  <div class="form-row" align="left">
+                    {% for radio in form.q8 %}
+                      <br> <div class="select">{{ radio.tag }}  {{ radio.choice_label }}&nbsp;&nbsp;</div>
+
+                    {% endfor %}
+                  </div>
+            <div class="form-row" align="left">
+                <code> {{ form.q8.errors }}</code>
+            </div>
+            </div>
+
+                    {{ form.q9.errors }}
+        <div class="form-group">
+           <div class="form-row" align="left">
+                   <label for="{{ form.q9.id_for_label }}">{{ form.q9.label }}</label>
+                        {{ form.q9 }}
+
+                    </div>
+            <div class="form-row" align="left">
+                <code>  {{ form.q9.errors }}</code>
+            </div>
+                </div>
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q10.id_for_label }}">{{ form.q10.label }}</label>
+            </div>
+                  <div class="form-row" align="left">
+                    {% for radio in form.q10 %}
+                      <br> <div class="select">{{ radio.tag }}  {{ radio.choice_label }}&nbsp;&nbsp;</div>
+
+                    {% endfor %}
+                  </div>
+            <div class="form-row" align="left">
+                <code> {{ form.q10.errors }}</code>
+            </div>
+            </div>
+
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q11.id_for_label }}">{{ form.q11.label }}</label>
+            </div>
+                  <div class="form-row" align="left">
+                    {% for radio in form.q11 %}
+                      <br> <div class="select">{{ radio.tag }}  {{ radio.choice_label }}&nbsp;&nbsp;</div>
+
+                    {% endfor %}
+                  </div>
+            <div class="form-row" align="left">
+                <code>   {{ form.q11.errors }}</code>
+            </div>
+            </div>
+
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q12.id_for_label }}">{{ form.q12.label }}</label>
+            </div>
+                  <div class="form-row" align="left">
+                    {% for radio in form.q12 %}
+                      <br> <div class="select">{{ radio.tag }}  {{ radio.choice_label }}&nbsp;&nbsp;</div>
+
+                    {% endfor %}
+                  </div>
+            <div class="form-row" align="left">
+                <code> {{ form.q12.errors }}</code>
+            </div>
+            </div>
+
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q13.id_for_label }}">{{ form.q13.label }}</label>
+                        {{ form.q13 }}
+
+                    </div>
+            <div class="form-row" align="left">
+                <code>  {{ form.q13.errors }}</code>
+            </div>
+                </div>
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q14.id_for_label }}">{{ form.q14.label }}</label>
+                        {{ form.q14 }}
+            </div>
+            <div class="form-row" align="left">
+                <code> {{ form.q14.errors }}</code>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="form-row" align="left">
+                   <label for="{{ form.q15.id_for_label }}">{{ form.q15.label }}</label>
+                        {{ form.q15 }}
+
+            </div>
+            <div class="form-row" align="left">
+                <code> {{ form.q15.errors }}</code>
+            </div>
+        </div>
+
+        <input type="submit" class="btn btn-primary btn-md btn-block" value="Submit"/>
+
+
+</form>
+         </div>
+     </div>
+ </div>
+
+
+{% else %}
+      <h3 class="display-8">Thank you for taking the survey!!!</h3>
+{% endif %}
+
+<script>
+document.getElementById("id_q4_1").checked = true;
+document.getElementById("id_q5_1").checked = true;
+document.getElementById("id_q8_1").checked = true;
+document.getElementById("id_q10_0").checked = true;
+document.getElementById("id_q11_0").checked = true;
+document.getElementById("id_q12_0").checked = true;
+</script>
 {% endblock %}
+
